labs/lab5/spring-starbucks-api/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spring-spring-starbucks-api
  namespace: default
  labels:
    name: spring-spring-starbucks-api
spec:
  containers:
    - image: jeongseungoh/spring-spring-starbucks-api:v1.0
      name: spring-spring-starbucks-api
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
