labs/lab5/spring-starbucks-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-starbucks-api-service
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    name: spring-starbucks-api
